<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/lin_footer"
        android:layout_width="match_parent"
        android:layout_height="@dimen/pad_50dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buy_gray_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/IVtimer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/pad_15dp"
            android:paddingTop="@dimen/pad_5dp"
            android:src="@drawable/icon_time" />

        <TextView
            android:id="@+id/TV7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/pad_7dp"
            android:text="@string/timeleft"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/TV8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/timeleft2"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_20sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buy_tour_pic"
        android:gravity="bottom"
        android:orientation="vertical"
     >       

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/popup_bg"
            android:orientation="horizontal" 
            android:gravity="center_vertical"
            android:padding="@dimen/pad_10dp">
            <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center_vertical"
            android:layout_weight="1">
            
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_dollar"
                android:paddingRight="@dimen/pad_5dp"
                />
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_main"
                    android:text="@string/$100"
                    android:textSize="@dimen/txt_16sp"
                    android:textStyle="bold"/>
                <TextView 
                    android:id="@+id/doller_strike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/$150"
                    android:textSize="@dimen/txt_14sp"/>
            </LinearLayout>
            </LinearLayout>
             <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center_vertical"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_percent"
                android:paddingLeft="@dimen/pad_10dp"
                android:paddingRight="@dimen/pad_5dp"
                />
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_main"
                    android:text="@string/s52"
                    android:textSize="@dimen/txt_16sp"
                    android:textStyle="bold"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_16sp"
                    android:text="@string/saving"/>
            </LinearLayout>
            </LinearLayout>
             <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" 
            android:gravity="center_vertical"
            android:layout_weight="1">
            <ImageView 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_remaining"
                 android:paddingLeft="@dimen/pad_10dp"
                android:paddingRight="@dimen/pad_5dp"
                />
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/red_main"
                    android:text="@string/s32"
                    android:textSize="@dimen/txt_16sp"
                    android:textStyle="bold"/>
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_16sp"
                    android:text="@string/remaining"/>
            </LinearLayout>
            </LinearLayout>
            
        </LinearLayout>
    </LinearLayout>
    <ScrollView 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/head"
        android:layout_above="@id/lin_footer">
        <LinearLayout 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/pad_15dp">
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fancy_a"
                android:textStyle="bold"
                android:textSize="@dimen/txt_18sp"/>
            <TextView
                    android:id="@+id/tvparagraph"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/paragraph"
                    android:textColor="@color/p_color"
                    android:textSize="@dimen/txt_14sp"
                    android:lineSpacingMultiplier="1.3"
                    android:textStyle="normal" 
                    android:paddingTop="@dimen/pad_20dp"/>
        </LinearLayout>
        
    </ScrollView>
    <ImageButton
        android:id="@+id/btn_cart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="@dimen/pad_20dp"
         android:layout_marginRight="@dimen/pad_10dp"
        android:src="@drawable/button_cart" 
        android:background="@null"/>

</RelativeLayout>