<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <LinearLayout
        android:id="@+id/mainv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tab_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/red_main"
            android:orientation="horizontal"
            android:paddingTop="@dimen/pad_30dp" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/tab1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/new1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_14sp" />

                <View
                    android:id="@+id/view1"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/tab2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/popular"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_14sp" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/tab3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:text="@string/endingsoon"
                    android:textColor="@color/white"
                    android:textSize="@dimen/txt_14sp" />

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="1.5dp"
                    android:background="@null" />
            </LinearLayout>
        </LinearLayout>
        <View 
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/p_color"                    
            />

        <FrameLayout
            android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/left"
        android:layout_width="280dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/white"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/red_main"
            android:gravity="bottom"
            android:orientation="vertical"
            android:paddingBottom="@dimen/pad_10dp" >

            <TextView
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_20dp"
                android:text="@string/john"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_25sp" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/pad_20dp"
                android:text="@string/example"
                android:textColor="@color/white"
                android:textSize="@dimen/txt_14sp" />
        </LinearLayout>

        <ListView
            android:id="@+id/left_drawer"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:choiceMode="singleChoice"
            android:divider="@null"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/side_menu_saperator" />

        <Button
            android:id="@+id/signout"
            style="@style/btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:drawablePadding="@dimen/pad_10dp"
            android:gravity="center"
            android:padding="@dimen/pad_10dp"
            android:text="@string/signout"
            android:textColor="@color/red_main"
            android:textSize="@dimen/txt_16sp" />
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>