<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/top"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingTop="@dimen/pad_15dp" 
    android:paddingLeft="@dimen/pad_10dp"
    android:paddingRight="@dimen/pad_10dp"  
     android:gravity="center_vertical">
    <LinearLayout
        android:id="@+id/left_layout" 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
       >
        
        <ImageView 
            android:id="@+id/item_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_mypurchase1"
            android:paddingBottom="@dimen/pad_10dp"/>
        
    </LinearLayout>
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/pad_10dp" >
    
    <LinearLayout 
        android:id="@+id/right_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
    
    <LinearLayout        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        
        <TextView 
            android:id="@+id/tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blue_mountains"
            />
        <TextView 
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:paddingTop="@dimen/pad_2.5dp"
            />
        
    </LinearLayout>
    <View android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"/>
    
    <LinearLayout
        
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="right"
        >
        
        <TextView 
            android:id="@+id/tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/$45"
            android:textColor="@color/red_main"
            android:textSize="@dimen/txt_18sp"
            />
        
        <TextView 
            android:id="@+id/tv4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/redeemed"
            android:textSize="@dimen/txt_12sp"
            />
    </LinearLayout>
   
    </LinearLayout>
     <View android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/my_purchase_list_sap"
        android:layout_marginTop="@dimen/pad_15dp"/>     
    
    </LinearLayout>
</LinearLayout>
